@@ -1,16 +1,16 @@
 /****************************************************************************
  *
  * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/netlib/shutdown.c,v $
- * $Date: 2002/02/14 15:56:36 $
- * $Revision: 1.3 $
+ * $Date: 2003/04/28 21:04:36 $
+ * $Revision: 1.4 $
  * $State: Exp $
- * $Author: admin $
+ * $Author: alex $
  *
  * (c) Copyright 1997 Nicholas Clark
  ***************************************************************************/
 
 #ifdef EMBED_RCSIS
-static const char rcs_id[] = "$Id: shutdown.c,v 1.3 2002/02/14 15:56:36 admin Exp $";
+static const char rcs_id[] = "$Id: shutdown.c,v 1.4 2003/04/28 21:04:36 alex Exp $";
 #endif
 
 #include <unixlib/unix.h>
@@ -20,12 +20,12 @@ static const char rcs_id[] = "$Id: shutdown.c,v 1.3 2002/02/14 15:56:36 admin Ex
 #include <pthread.h>
 
 int
-shutdown (int socket, int how)
+shutdown (int ssocket, int how)
 {
   PTHREAD_UNSAFE
 
-  if (__socket_valid (socket) == -1)
+  if (__socket_valid (ssocket) == -1)
     return -1;
 
-  return _shutdown ((int)__u->fd[socket].handle, how);
+  return _shutdown ((int)__u->fd[ssocket].handle, how);
 }
